...
                        is Result.Success -> {
                            val user = result.data
                            sessionManager.saveSession(user, rememberMe)
                            setState(AuthState.Authenticated(user))
                            setEvent(
                                UiEvent.AuthSuccess(
                                message = "Connexion réussie",
                                route = NavigationRoutes.HOME
                            ))
                        }
                        is Result.Error -> {
                            val errorMessage = getErrorMessage(result.exception)
                            val errorType = getErrorType(result.exception)
...
